@@ -1,3 +1,7 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	oops, forgot to call the IncomingConversation event
+
 2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
 
 	ADded debug to know when new conversation came in
